--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,53 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Build artifacts and dependencies for Java Backend
+target/
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+# IDE files (IntelliJ, VS Code, etc.)
+.idea/
+*.iws
+*.iml
+*.ipr
+.vscode/
+
+# STS specific ignores (if applicable)
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+springBeans
+.sts4-cache
+
+# NetBeans specific ignores (if applicable)
+/nbproject/private/
+/nbbuild/
+/nbdist/
+/nbgradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+# Build artifacts and dependencies for Frontend
+frontend/node_modules/
+frontend/build/
+frontend/dist/
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# Database file (if you don't want to track it)
+workouts.db
+
+# macOS specific files
+.DS_Store
+
+# Other misc
+HELP.md # If this is a file you genuinely want ignored
